--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cesium": "^1.121.1",
+    "css-loader": "^7.1.2",
+    "globe.gl": "^2.32.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "style-loader": "^4.0.0",
+    "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
