--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cesium": "^1.121.1",
     "css-loader": "^7.1.2",
     "globe.gl": "^2.32.5",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
